# managarm

./: meson.build
drivers/nic/: 90-managarm-nic.rules
drivers/nic/amdpcnet/: meson.build
drivers/nic/amdpcnet/include/nic/amdpcnet/: amdpcnet.hpp
drivers/nic/amdpcnet/src/: amdpcnet.cpp
servers/netserver/: meson.build
servers/netserver/src/: main.cpp  nic.cpp
